--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,18 +194,18 @@ main {
     flex-wrap: wrap;
     justify-content: space-around;
 }
-.card {
+.vitrine--card {
     width: min(45%, 320px);
     margin: 15px 0;
     border: 2px solid var(--clr-grey-0)
 }
-    .card:hover {
+    .vitrine--card:hover {
         border: 2px solid var(--clr-primary);
     }
-.card--info-box {
+.vitrine--card-info-box {
     padding: 11px 1% 11px 5%;
 }
-.card--item-figure {
+.vitrine--card-figure {
     background-color: var(--clr-grey-0);
     width: 100%;
     height: 150px;
@@ -214,39 +214,39 @@ main {
     align-items: center;
     overflow: hidden;
 }
-.card--item-figure img{
+.vitrine--card-figure img{
     height: 90%;
 }
-.card--item-tag {
+.vitrine--card-tag {
     color: var(--clr-white);
     background-color: var(--clr-primary);
     display: inline-block;
     padding: 3px 5px;
 }
-.card--item-name {
+.vitrine--card-name {
     color: var(--clr-grey-100);
     margin: 8px 0;
 }
-.card--item-info {
+.vitrine--card-info {
     color: var(--clr-grey-50);
     margin: 8px 0;
 }
-.card--item-price {
+.vitrine--card-price {
     color: var(--clr-primary);
     font-weight: 600;
     margin: 8px 0;
 }
-.card--item-add {
+.vitrine--card-add {
     color: var(--clr-grey-50);
 } 
-    .card--item-add:hover {
+    .vitrine--card-add:hover {
         color: var(--clr-secondary)
     }
 /* FIM VITRINE */
 
 /* MEDIA QUERIES */
 @media only screen and (min-width: 768px) {
-    .card {
+    .vitrine--card {
         width: 25%;
     }
     .menu--icon {
@@ -291,10 +291,10 @@ main {
     .vitrine {
         width: 70%;
     }
-    .card {
+    .vitrine--card {
         margin: 0;
     }
-    .card:nth-child(n+4) {
+    .vitrine--card:nth-child(n+4) {
         margin: 50px 0 0;
     }
 }
