--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,13 +164,12 @@ main {
 }
 .carrinho--lista {
     display: flex;
-    flex-wrap: wrap;
     overflow-y: scroll;
     padding: 21px 0 11px;
     background-color: var(--clr-grey-0);
 }
 .carrinho--vazio-conteiner {
-    align-self: center;
+    margin: auto;
 }
 .carrinho--vazio-conteiner h2 {
     color: var(--clr-grey-100);
@@ -215,8 +214,8 @@ main {
         color: var(--clr-secondary);
         cursor: pointer;
     }
-.carrinho-preço {
-    display: flex;
+.carrinho-total {
+    display: none;
     flex-wrap: wrap;
     align-items: center;
     box-sizing: border-box;
@@ -224,13 +223,13 @@ main {
     padding: 15px 6% 20px 5% ;
     background-color: var(--clr-grey-100);
 }
-.carrinho-preço p {
+.carrinho-total p {
     width: 50%;
 }
-.carrinho-preço p:nth-child(odd) {
+.carrinho-total p:nth-child(odd) {
     color: var(--clr-white);
 }
-.carrinho-preço p:nth-child(even) {
+.carrinho-total p:nth-child(even) {
     color: var(--clr-grey-50);
     text-align: right;
 }
@@ -341,9 +340,6 @@ main {
     .carrinho--lista {
         height: 400px;
         flex-flow: column nowrap;
-    }
-    .carrinho--vazio-conteiner h2 {
-        margin: 149px 0 8px;
     }
     .carrinho--card {
         display: flex;
