Item detail correção de cor, desktop tag em posição certa

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,4 +386,12 @@ main {
     #showcase {
         width: 65%;
     }
+    .showcase-item {
+        position: relative;
+    }
+    .showcase-item-tag {
+        position: absolute;
+        top: 2%;
+        left: 2%;
+    }
 }
