--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ header {
     transition: all 0.4s;
     padding-left: 15px;
 }
-.active-link {
+.active-link, a.active-link:hover {
     background-color: var(--clr-secondary);
     color: var(--clr-white);
 }
@@ -349,14 +349,17 @@ main {
         border: 0;
     }
     .menu-link {
-        border: 0;
+        border: 2px solid transparent;
         padding: 10px;
         margin: 0 5px;
         width: auto;
-        border-radius: 4px;
+        border-radius: 10px;
     }
     .menu-link:hover {
         padding: 10px;
+        background-color: var(--clr-grey-0);
+        color: var(--clr-grey-100);
+        border-bottom: 2px solid var(--clr-secondary);
     }
 }
 @media only screen and (min-width: 1024px) {
